Fixed Detection For Event

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Network]
-Service: IP:PORT
+Service: emulator-5554
 
 [Screenshot]
 ; Available modes from slowest to fastest
@@ -14,22 +14,22 @@ Channel: Development
 Server: EN
 
 [Combat]
-Enabled: False
-Map: 3-4
+Enabled: True
+Map: E-B2
 KillsBeforeBoss: 0
-BossFleet: False
-OilLimit: 1000
-RetireCycle: 2
+BossFleet: True
+OilLimit: 8000
+RetireCycle: 1
 RetreatAfter: 0
 IgnoreMysteryNodes: False
 FocusOnMysteryNodes: False
 ClearingMode: False
 HideSubsHuntingRange: False
 SmallBossIcon: False
-SirenElites: False
+SirenElites: True
 IgnoreMorale: False
 LowMoodSleepTime: 1
-SearchMode: 1
+SearchMode: 0
 
 [Headquarters]
 Dorm: False
@@ -46,8 +46,8 @@ Enabled: False
 SingleEnhancement: False
 
 [Retirement]
-Enabled: False
-Rares: False
+Enabled: True
+Rares: True
 Commons: True
 
 [Research]
@@ -70,6 +70,6 @@ AwardMustContainPRBlueprint: False
 
 [Events]
 Enabled: False
-Event: Royal_Maids
+Event: Crosswave
 Levels: EX,H,N,E
 IgnoreRateUp: False
