--- a/config.ini
+++ b/config.ini
@@ -15,8 +15,8 @@ Server: EN
 
 [Combat]
 Enabled: True
-Map: E-B2
-KillsBeforeBoss: 0
+Map: 7-2
+KillsBeforeBoss: 5
 BossFleet: True
 OilLimit: 8000
 RetireCycle: 1
@@ -26,7 +26,7 @@ FocusOnMysteryNodes: False
 ClearingMode: False
 HideSubsHuntingRange: False
 SmallBossIcon: False
-SirenElites: True
+SirenElites: False
 IgnoreMorale: False
 LowMoodSleepTime: 1
 SearchMode: 0
